@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
left to right direction
'skinparam classAttributeIconSize 0
hide circle
hide methods
'---------File styling---------
skinparam class {
    BackgroundColor PeachPuff
    ArrowColor RoyalBlue
    BorderColor RoyalBlue
}
'------------|Actors|----------------
class Employee{
    -agencyDesignation

}
class Person {
    -name
    -passportNumber
    -taxNumber
    -email
    -phoneNumber
    -password
}
class "Property Owner" as PO {

}
class Property {
    - type
    - area 
    - distanceFromCityCenter
    - photographs

}
class Home {
    - numberOfbedrooms
    - numberOfbathrooms
    - numberOfParkingSpace
    - availableEquipment
}
class Land{

}
class Apartment{

}
class House{
    - basement
    - inhabitableLoft
    - sunExposure
}
class Advertisement{
    - state
}
class Sale{
    -propertyPrice
}
class Rent{
    - propertyRent
    -contractDuration
}
class Deal {
    - dealType
}
class Address {
    - street
    - city 
    - state 
    - zipcode
}
class Role{
    - id
    - description
}
'-------------------connections------------------
'Owner
PO "1" -- "1" Advertisement : request >
Person "1" *-- "1" Address : has a >
PO --|> Person : is a 
'Advertisement
Advertisement "1" -- "1" Deal : has a >
Advertisement "1" -- "1" Property : has >
Advertisement "1" -- "1" Employee : send to >

'Property
Property "1" *-- "1" Address : has a >

'Deal 
Deal <|-- Rent 
Deal <|-- Sale

'--------------------heritage--------------------
.Property <|-- .Land : is a 
.Property <|-- .Home : is a
.Home <|-- .Apartment : is a
.Home <|-- .House : is a

 Employee --|> Person : is a

 Employee *-- Role 



@enduml